--- a/packages/hzl-web/src/ui/index.html
+++ b/packages/hzl-web/src/ui/index.html
@@ -452,7 +452,7 @@
       background: var(--bg-secondary);
       border: 1px solid var(--border);
       border-radius: 8px;
-      max-width: 600px;
+      max-width: 800px;
       width: 100%;
       max-height: 80vh;
       overflow: hidden;
@@ -547,9 +547,129 @@
       background: var(--bg-primary);
       padding: 12px;
       border-radius: 4px;
-      white-space: pre-wrap;
       font-size: 12px;
       line-height: 1.6;
+    }
+
+    /* Markdown content styles */
+    .modal-description h1,
+    .modal-description h2,
+    .modal-description h3,
+    .modal-description h4,
+    .modal-description h5,
+    .modal-description h6 {
+      margin: 16px 0 8px 0;
+      font-weight: 600;
+      line-height: 1.3;
+    }
+
+    .modal-description h1:first-child,
+    .modal-description h2:first-child,
+    .modal-description h3:first-child {
+      margin-top: 0;
+    }
+
+    .modal-description h1 { font-size: 18px; }
+    .modal-description h2 { font-size: 16px; }
+    .modal-description h3 { font-size: 14px; }
+    .modal-description h4,
+    .modal-description h5,
+    .modal-description h6 { font-size: 12px; }
+
+    .modal-description p {
+      margin: 8px 0;
+    }
+
+    .modal-description p:first-child {
+      margin-top: 0;
+    }
+
+    .modal-description p:last-child {
+      margin-bottom: 0;
+    }
+
+    .modal-description ul,
+    .modal-description ol {
+      margin: 8px 0;
+      padding-left: 20px;
+    }
+
+    .modal-description li {
+      margin: 4px 0;
+    }
+
+    .modal-description code {
+      background: var(--bg-secondary);
+      padding: 2px 6px;
+      border-radius: 3px;
+      font-family: var(--font-mono);
+      font-size: 11px;
+    }
+
+    .modal-description pre {
+      background: var(--bg-secondary);
+      padding: 12px;
+      border-radius: 4px;
+      overflow-x: auto;
+      margin: 12px 0;
+    }
+
+    .modal-description pre code {
+      background: none;
+      padding: 0;
+      font-size: 11px;
+      line-height: 1.5;
+    }
+
+    .modal-description blockquote {
+      border-left: 3px solid var(--accent);
+      margin: 12px 0;
+      padding: 8px 12px;
+      background: var(--bg-secondary);
+      color: var(--text-secondary);
+    }
+
+    .modal-description blockquote p {
+      margin: 0;
+    }
+
+    .modal-description a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+
+    .modal-description a:hover {
+      text-decoration: underline;
+    }
+
+    .modal-description hr {
+      border: none;
+      border-top: 1px solid var(--border);
+      margin: 16px 0;
+    }
+
+    .modal-description table {
+      border-collapse: collapse;
+      width: 100%;
+      margin: 12px 0;
+      font-size: 11px;
+    }
+
+    .modal-description th,
+    .modal-description td {
+      border: 1px solid var(--border);
+      padding: 6px 10px;
+      text-align: left;
+    }
+
+    .modal-description th {
+      background: var(--bg-secondary);
+      font-weight: 600;
+    }
+
+    .modal-description img {
+      max-width: 100%;
+      height: auto;
     }
 
     .modal-comments {
@@ -1812,7 +1932,7 @@
           html += `
             <div class="modal-section">
               <div class="modal-section-title">Description</div>
-              <div class="modal-description">${escapeHtml(data.task.description)}</div>
+              <div class="modal-description">${renderMarkdown(data.task.description)}</div>
             </div>
           `;
         }
@@ -2020,6 +2140,22 @@
       return str.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;').replace(/"/g, '&quot;');
     }
 
+    // Render markdown to sanitized HTML
+    function renderMarkdown(str) {
+      if (!str) return '';
+      // Fall back to plain text if libraries aren't loaded
+      if (typeof marked === 'undefined' || typeof DOMPurify === 'undefined') {
+        return escapeHtml(str);
+      }
+      try {
+        const html = marked.parse(str);
+        return DOMPurify.sanitize(html);
+      } catch (e) {
+        console.error('Markdown parse error:', e);
+        return escapeHtml(str);
+      }
+    }
+
     // Time constants in milliseconds
     const MS_PER_SECOND = 1000;
     const MS_PER_MINUTE = 60 * MS_PER_SECOND;
@@ -2214,6 +2350,10 @@
       }
     }, 1000);
   </script>
+
+  <!-- Markdown rendering -->
+  <script src="https://cdn.jsdelivr.net/npm/marked@15/marked.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dompurify@3/dist/purify.min.js"></script>
 
   <!-- d3 for graph layout forces -->
   <script src="https://cdn.jsdelivr.net/npm/d3@7/dist/d3.min.js" defer></script>
